Cleanup testing strategy